Remove empty files - no need to ship them around
also don't ship the test project

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include README.rst LICENSE requirements.txt
 
+recursive-exclude test_project/ *
 recursive-exclude tcms_github_marketplace/tests/ *
