--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,23 @@ language: python
 cache: pip
 python:
   - "3.6"
+
+addons:
+  postgresql: "10"
+  apt:
+    packages:
+    - postgresql-10
+    - postgresql-client-10
+
+services:
+  - postgresql
+
 install:
   - pip install -U pip
   - pip install -r devel.txt
+
+before_script:
+  - psql -c "CREATE USER kiwi WITH PASSWORD 'kiwi' CREATEDB;" -U postgres
 
 script:
   - make check
