Try installing the btree_gin extension in Travis CI
b/c this requires db connection with postgres user and we are not
using that. At least we'll see if the migration will fail.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ install:
   - pip install -r devel.txt
 
 before_script:
+  - psql -c "CREATE EXTENSION IF NOT EXISTS btree_gin;" -U postgres
   - psql -c "CREATE USER kiwi WITH PASSWORD 'kiwi' CREATEDB;" -U postgres
 
 script:
