--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,6 @@
 include README.rst LICENSE requirements.txt
 
+graft tcms_github_marketplace/templates
+
 recursive-exclude test_project/ *
 recursive-exclude tcms_github_marketplace/tests/ *
