--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -19,6 +19,16 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - uses: psf/black@stable
 
+  eslint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run eslint
+        run: |
+          npm install --dev
+
+          ./node_modules/.bin/eslint . -c package.json
+
   postgres:
     runs-on: ubuntu-latest
     strategy:
