Tell PyUP bot not to pin dependencies

--- a/.pyup.yml
+++ b/.pyup.yml
@@ -1,7 +1,7 @@
 requirements:
   - requirements.txt:
       update: all
-      pin: True
+      pin: False
   - devel.txt:
       update: all
       pin: False
