--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -84,5 +84,5 @@ jobs:
       - name: Send coverage to CodeCov
         uses: codecov/codecov-action@v3
         with:
-          fail_ci_if_error: true
+          fail_ci_if_error: false
           files: coverage.xml
