--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,17 @@ services:
             POSTGRES_DB: test_project
             POSTGRES_USER: kiwi
             POSTGRES_PASSWORD: kiwi
+
+
+    pgadmin:
+        container_name: pgadmin
+        image: dpage/pgadmin4
+        restart: always
+        ports:
+            - 8888:80
+        environment:
+            PGADMIN_DEFAULT_EMAIL: pgadmin@kiwitcms.org
+            PGADMIN_DEFAULT_PASSWORD: kiwi
+
 volumes:
     postgresql_database_data:
