--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -83,3 +83,45 @@ jobs:
         with:
           fail_ci_if_error: false
           files: coverage.xml
+
+  test-via-docker:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.11]
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install Python dependencies
+        run: |
+            pip install -U pip wheel setuptools
+            pip install -r devel.txt
+
+      - name: Login to Quay.io
+        run: |
+          echo "${{ secrets.QUAY_PUSH_TOKEN }}" | docker login -u="${{ secrets.QUAY_PUSH_USERNAME }}" --password-stdin quay.io
+
+      - name: Execute tests
+        run: |
+          make test-via-docker
+
+      - name: Logout of Quay.io
+        if: always()
+        run: |
+          docker logout quay.io
+
+      - name: Upload testing artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: testing-artifacts
+          path: |
+            ./*.html
+            ./*.log
+            ./*docker.log
+            ./test*.txt
