--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -105,7 +105,7 @@ jobs:
 
       - name: Login to Quay.io
         run: |
-          echo "${{ secrets.QUAY_PUSH_TOKEN }}" | docker login -u="${{ secrets.QUAY_PUSH_USERNAME }}" --password-stdin quay.io
+          echo "${{ secrets.QUAY_PULL_TOKEN }}" | docker login -u="${{ secrets.QUAY_PULL_USERNAME }}" --password-stdin quay.io
 
       - name: Build unreleased containers
         run: |
