Rework how settings are applied during development & testing
b/c manage.py commands are also executed inside the container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
             QUAY_IO_TOKEN: test-me
             KIWI_TENANTS_DOMAIN: testing.example.bg
             DATABASE_URL: postgres://kiwi:kiwi@db:5432/test_project
+            RUNNING_AS_CONTAINER: "true"
 
 volumes:
     postgresql_database_data:
