Install self-signed CA certificate in the OS keystore
- regenerate container SSL certificate to be valid for particular hostname
- restart web service for the new SSL certificate to take effect
- download login page via curl as yet another sanity check of SSL
  certificates

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -98,10 +98,14 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get install -y ca-certificates
+
       - name: Install Python dependencies
         run: |
-            pip install -U pip wheel setuptools
-            pip install -r devel.txt
+          pip install -U pip wheel setuptools
+          pip install -r devel.txt
 
       - name: Login to Quay.io
         run: |
