Relicense this package under AGPLv3+
this is GNU Affero General Public License v3 or later!

There are 7 total contributors in this code base, listed by number of
contributions:
- atodorov                (335 commits)
- pre-commit-ci[bot]      (10 commits)
- dependabot[bot]         (9 commits)
- pyup-bot                (6 commits)
- snyk-bot                (1 commit)
- lgtm-migrator           (1 commit)
- dependabot-preview[bot] (1 commit)

This is myself + several automated services which I have enabled on this
repository!

--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "author": "Alexander Todorov",
+  "licence": " AGPL-3.0-or-later",
   "devDependencies": {
     "eslint": "^8.18.0",
     "eslint-config-standard": "^17.0.0",
