--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,8 @@
+# Copyright (c) 2022-2024 Alexander Todorov <atodorov@otb.bg>
+#
+# Licensed under GNU Affero General Public License v3 or later (AGPLv3+)
+# https://www.gnu.org/licenses/agpl-3.0.html
+
 [flake8]
 max-line-length = 102
 extend-ignore = E203, W503
