Add details for code introduced in 730ffb3f0b54aac0b0e17d2ec1165c56d4fe9383
files under this directory are not affected by the license change of
this repository. They still retain their original LGPL-3.0 license
eventhough I've made modifications to them!

Also include these details when building the package for PyPI.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,8 @@
 include README.rst LICENSE requirements.txt
 
+include tcms_github_marketplace/quay/LICENSE
+include tcms_github_marketplace/quay/README.rst
+
 graft tcms_github_marketplace/static
 graft tcms_github_marketplace/templates
 
